refactor: Command system